<resources>
    <string name="app_name">kannect</string>
    <string name="create">Erstellen</string>
    <string name="join">Beitreten</string>
    <string name="title_activity_binding">BindingActivity</string>
    <string name="title_activity_group_form">GroupForm</string>
    <string name="title_activity_group_view">GroupView</string>
    <string name="title_activity_event_view">EventView</string>
    <string name="title_activity_login_view">LoginView</string>
    <string name="title_activity_event_form">EventForm</string>
    <string name="title_activity_home_page">HomePage</string>

    <string name="profile_picture_commentator">Profile Picture of the User who created the shown comment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation__drawer_">Navigation_Drawer_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="events">Veranstaltungen</string>
    <string name="groups">Gruppen</string>
    <string name="settings">Einstellungen</string>
    <string name="feed">Feed</string>
    <string name="profile">Profil</string>
    <string name="search">Suche</string>
    <string name="kannect">KAnnect</string>
    <string name="entdecken">Entecken</string>
    <string name="editGroup">Gruppe bearbeiten</string>
    <string name="deleteGroup">Gruppe löschen</string>
    <string name="subscribers">Abonnenten</string>
    <string name="subscriptions">Abonnements</string>
    <string name="userSearch">Suchbegriff eingeben:</string>
    <string name="groupDescription">Beschreibung:</string>
    <string name="groupImageUrl">Bild Url</string>
    <string name="groupName">Gruppenname</string>
    <string name="eventDescription">Beschreibung</string>
    <string name="eventImageUrl">Bild Url</string>
    <string name="eventName">Name</string>
    <string name="eventDate">Datum: dd.mm.yyyy</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="logout">Abmelden</string>
    <string name="typePost">Text eingeben…</string>
    <string name="post">Posten</string>
    <string name="createPost">Post erstellen</string>
    <string name="createEvent">Veranstaltung erstellen</string>
    <string name="createGroup">Gruppe erstellen</string>
    <string name="subcategoriesEvent">Unterkategorien</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="default_web_client_id" translatable="false">963952173312-rpfvhcumlsplr2cjfej2nhn8a8lpn688.apps.googleusercontent.com</string>
    <string name="firebase_database_url" translatable="false">https://kannect-client-app.firebaseio.com</string>
    <string name="gcm_defaultSenderId" translatable="false">963952173312</string>
    <string name="google_api_key" translatable="false">AIzaSyC4Jt9j9CJ3f01iPUOiGmjRnFKOYHl1AuQ</string>
    <string name="google_app_id" translatable="false">1:963952173312:android:61b6817e3558dbff</string>
    <string name="google_crash_reporting_api_key" translatable="false">AIzaSyC4Jt9j9CJ3f01iPUOiGmjRnFKOYHl1AuQ</string>
    <string name="google_storage_bucket" translatable="false">kannect-client-app.appspot.com</string>
    <string name="project_id" translatable="false">kannect-client-app</string>
    <string name="subcategoriesGroup">Unterkategorien</string>
    <string name="personalFeed">Persönlicher Feed</string>
    <string name="myGroups">Meine Gruppen</string>
    <string name="myEvents">Meine Veranstaltungen</string>
    <string name="groupsInSubcategory">Gruppen</string>
    <string name="groupsInCategory">Gruppen</string>
    <string name="eventsInSubcategory">Veranstaltungen</string>
    <string name="eventsInCategory">Veranstaltungen</string>
    <string name="categoriesGroup">Kategorien</string>
    <string name="categoriesEvent">Kategorien</string>
    <string name="hello">Hello World !</string>
    <string name="numberOfLike">16</string>


</resources>
