<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="itemCategoryViewModel"
            type="com.example.asus.example.mvvm.ViewModel.ItemCategoryViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/oneFragmentHeight">


        <Button
            android:id="@+id/newEventInCategoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:onClick="@{()->itemCategoryViewModel.onCreateEventClick()}"
            android:text="@string/create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newEventInCategoryImageUrlET"
            app:layout_constraintVertical_bias="0.715" />

        <EditText
            android:id="@+id/newEventInCategoryNameET"
            android:text="@={itemCategoryViewModel.inputName}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="52dp"
            android:hint="@string/eventName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/newEventInCategoryDescriptionET"
            android:text="@={itemCategoryViewModel.inputDesc}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="56dp"
            android:ems="10"
            android:hint="@string/eventDescription"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newEventInCategoryNameET" />

        <EditText
            android:id="@+id/newEventInCategoryImageUrlET"
            android:text="@={itemCategoryViewModel.inputImageUrl}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="48dp"
            android:hint="@string/eventImageUrl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.042"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newEventInCategoryDescriptionET" />

        <EditText
            android:id="@+id/newEventInCategoryDateET"
            android:text="@={itemCategoryViewModel.inputDate}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="40dp"
            android:hint="@string/eventDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newEventInCategoryImageUrlET" />


    </android.support.constraint.ConstraintLayout>
</layout>