<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="itemCategoryViewModel"
            type="com.example.asus.example.mvvm.ViewModel.ItemCategoryViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/oneFragmentHeight"
        android:layout_marginTop="@dimen/toolbarHeight"
        android:background="@color/white">


        <Button
            android:onClick="@{(v)->itemCategoryViewModel.createGroup(v)}"
            android:id="@+id/newGroupInCategoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newGroupInCategoryImageUrlET" />

        <EditText
            android:id="@+id/newGroupInCategoryNameET"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="44dp"
            android:hint="@string/groupName"
            android:inputType="text"
            android:text="@={itemCategoryViewModel.inputName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.018"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/newGroupInCategoryDescriptionET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="96dp"
            android:ems="10"
            android:hint="@string/groupDescription"
            android:inputType="textMultiLine"
            android:text="@={itemCategoryViewModel.inputDesc}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/newGroupInCategoryNameET"
            app:layout_constraintTop_toBottomOf="@+id/newGroupInCategoryNameET" />

        <EditText
            android:id="@+id/newGroupInCategoryImageUrlET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="276dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="276dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="120dp"
            android:hint="@string/groupImageUrl"
            android:text="@={itemCategoryViewModel.inputImageUrl}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/newGroupInCategoryDescriptionET"
            android:inputType="textUri"
            app:layout_constraintTop_toBottomOf="@+id/newGroupInCategoryDescriptionET" />
    </android.support.constraint.ConstraintLayout>
</layout>