<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="itemSubcategoryViewModel"
            type="com.example.asus.example.mvvm.ViewModel.ItemSubcategoryViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/oneFragmentHeight">


        <EditText
            android:id="@+id/newEventInSubcategoryNameET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="52dp"
            android:hint="@string/eventName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.007"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/newEventInSubcategoryDescriptionET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="108dp"
            android:ems="10"
            android:hint="@string/eventDescription"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.196"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newEventInSubcategoryNameET" />

        <EditText
            android:id="@+id/newEventInSubcategoryImageUrlET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="168dp"
            android:hint="@string/eventImageUrl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.101"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newEventInSubcategoryDescriptionET" />
    </android.support.constraint.ConstraintLayout>
</layout>