<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="itemSubcategoryViewModel"
            type="com.example.asus.example.mvvm.ViewModel.ItemSubcategoryViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/oneFragmentHeight">


        <EditText
            android:id="@+id/newGroupInSubcategoryNameET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="40dp"
            android:hint="@string/groupName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/newGroupInSubcategoryDescriptionET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="132dp"
            android:ems="10"
            android:hint="@string/groupDescription"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newGroupInSubcategoryNameET" />

        <EditText
            android:id="@+id/newGroupInSubcategoryImageUrlET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="164dp"
            android:hint="@string/groupImageUrl"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newGroupInSubcategoryDescriptionET"
            app:layout_constraintVertical_bias="0.0" />
    </android.support.constraint.ConstraintLayout>
</layout>