<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/newEventDescriptionTV"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="56dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="72dp"
            android:text="@string/groupDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newEventImageUrlTV" />

        <TextView
            android:id="@+id/newEventNameTV"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginLeft="56dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="48dp"
            android:text="@string/groupName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/newEventImageUrlTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="56dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="80dp"
            android:text="@string/groupImageUrl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newEventNameTV" />

        <EditText
            android:id="@+id/newEventNameET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.467"
            app:layout_constraintStart_toEndOf="@+id/newEventNameTV"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/newEventDescriptionET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="304dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.467"
            app:layout_constraintStart_toEndOf="@+id/newEventDescriptionTV" />

        <EditText
            android:id="@+id/newEventImageUrlET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/newEventDescriptionET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toEndOf="@+id/newEventImageUrlTV"
            app:layout_constraintTop_toBottomOf="@+id/newEventNameET"
            app:layout_constraintVertical_bias="0.51" />
    </android.support.constraint.ConstraintLayout>
</layout>